# agentic-mlops

./: .gitignore  .pre-commit-config.yaml  .railwayignore  1-deploy-infrastructure.sh  2-build-and-push.sh  3-deploy-app-runner.sh  AGENTS.md  IMPLEMENTATION_CHANGELOG.md  README.md  alembic.ini  claude.md  deployment_guide.md  package-lock.json  package.json  pyproject.toml
alembic/: env.py
api/: Dockerfile  main.py  test_review.py
context/: implementation_details.md  implementation_plan.md  prd.md  prompts.md
docs/: IMPLEMENTATION_CHANGELOG.md  LANGSMITH_INTEGRATION_SUMMARY.md  README.md  TECHNICAL_ARCHITECTURE.md  deployment_guide.md  issue-10-llm-transformation-plan.md  issue-8-async-job.md  part1-system-overview.md  part2-technical-specifications.md  part3-architecture-deep-dive.md  part4-operations-production.md  railway_deployment_guide.md  sqlalchemy-alembic-guide.md  sse-streaming-debug-guide.md  streaming-architecture-guide.md
frontend/: Dockerfile  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
libs/: __init__.py  adaptive_questions_agent.py  agent_framework.py  agent_output_schemas.py  codegen_factory.py  codegen_service.py  codegen_service_openai.py  constraint_schema.py  coverage_check_agent.py  database.py  graph.py  hitl_graph.py  intake_extract_agent.py  job_service.py  llm_agent_base.py  llm_client.py  llm_cost_critic_agent.py  llm_planner_agent.py  llm_policy_engine_agent.py  llm_tech_critic_agent.py  mock_agents.py  models.py  streaming_models.py  streaming_service.py  validation_service.py
scripts/: 1-deploy-infrastructure.sh  2-build-and-push.sh  3-deploy-app-runner.sh  test-e2e-playwright.sh  test-e2e.sh
tests/: test_api.py  test_async_api.py  test_checkpointing.py  test_codegen_integration.py  test_codegen_service.py  (+11 more)
(+50 files in other folders)
