[project]
name = "agentic-mlops"
version = "0.1.0"
description = "Agentic MLOps platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-core",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
    "httpx",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
