[project]
name = "agentic-mlops"
version = "0.1.0"
description = "Agentic MLOps platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-core",
    "langgraph-checkpoint-postgres",
    "langgraph-checkpoint-sqlite",  # For local development checkpointing
    "langgraph-checkpoint",         # For in-memory fallback
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",  # For SQLAlchemy with PostgreSQL
    "psycopg[binary]",   # For LangGraph PostgresSaver checkpointing
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "integration: marks tests as integration tests",
]
